@@ -69,3 +69,4 @@ CONFIG_HAVE_EEPROMFS=y
 CONFIG_LOADER_MMZAK=y
 CONFIG_LOADER_N0SDOS=y
 CONFIG_LOADER_SAMSJOURNEY=y
+CONFIG_LOADER_ULTRABOOT=n
