@@ -15,6 +15,7 @@ SRC += lpc17xx/llfl-epyxcart.c
 SRC += lpc17xx/llfl-geos.c
 SRC += lpc17xx/llfl-parallel.c
 SRC += lpc17xx/llfl-n0sdos.c
+SRC += lpc17xx/llfl-ultraboot.c
 
 ifeq ($(CONFIG_UART_DEBUG),y)
   SRC += lpc17xx/printf.c
